fix: restore statement lines and stable locals for automatic IDE decompilation